force-app/main/default/objects/ToFromHDE2__mdt/ToFromHDE2__mdt.object-meta.xml
<CustomObject>
    <description>Objeto utilizado na automação de mapeamento de complexidados dos chamados abertos pelos operadores</description>
    <label>HDE - DePara 2</label>
    <pluralLabel>HDE - DePara 2</pluralLabel>
</CustomObject>