force-app/main/default/objects/ToFromHDE2__mdt/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <label>Crítico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
            <value>
                <fullName>Nao</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>