force-app/main/default/objects/ToFromHDE2__mdt/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>Segmento do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>PURPURA</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>