force-app/main/default/objects/ToFromHDE2__mdt/fields/CustomerServiceReason__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceReason__c</fullName>
    <label>Motivo Relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ª via de Nota Fiscal</fullName>
            </value>
            <value>
                <fullName>Abertura de SMAP</fullName>
            </value>
            <value>
                <fullName>Abertura Vivo Now</fullName>
            </value>
            <value>
                <fullName>Ação Rechamadores V</fullName>
            </value>
            <value>
                <fullName>Acompanhamento de Técnico Fixa</fullName>
            </value>
            <value>
                <fullName>Acompanhamento - Entrega (Loja Online)</fullName>
            </value>
            <value>
                <fullName>Acompanhamento Vivo Now</fullName>
            </value>
            <value>
                <fullName>Acordos Global One e Fixa Legado</fullName>
            </value>
            <value>
                <fullName>Agenda não cumprida</fullName>
            </value>
            <value>
                <fullName>Agenda técnica não cumprida</fullName>
            </value>
            <value>
                <fullName>Agenda técnica não cumprida - Instalação</fullName>
            </value>
            <value>
                <fullName>Agenda técnica não cumprida - Reparo</fullName>
            </value>
            <value>
                <fullName>Alocação de fundos Kenan</fullName>
            </value>
            <value>
                <fullName>Análise/Suspeita de Fraude</fullName>
            </value>
            <value>
                <fullName>Análise de Cobertura</fullName>
            </value>
            <value>
                <fullName>Análise de Cobertura Condomínio</fullName>
            </value>
            <value>
                <fullName>Análise de Cobertura e disponibilidade da Fixa</fullName>
            </value>
            <value>
                <fullName>Análise de crédito para mudança de Plano</fullName>
            </value>
            <value>
                <fullName>Análise de Retirada de Fidelidade</fullName>
            </value>
            <value>
                <fullName>Análise para Retirada de Fidelidade</fullName>
            </value>
            <value>
                <fullName>Ativação de E-Sim</fullName>
            </value>
            <value>
                <fullName>Ativação de serviço (falha sistêmica)</fullName>
            </value>
            <value>
                <fullName>Atraso na entrega de controle remoto</fullName>
            </value>
            <value>
                <fullName>Baixa de Pagto/ Envio de Comprovante/ Religue</fullName>
            </value>
            <value>
                <fullName>Baixa de Pagto / Envio de Comprovante / Religue</fullName>
            </value>
            <value>
                <fullName>Biometria Documental</fullName>
            </value>
            <value>
                <fullName>Bloqueio de Telemarketing</fullName>
            </value>
            <value>
                <fullName>Bloqueios e Suspensões Judiciais</fullName>
            </value>
            <value>
                <fullName>Cancelamento/Devolução Aparelho/Estorno Valores (Loja Online)</fullName>
            </value>
            <value>
                <fullName>Chamador diferente binado p/ troca de número</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>