force-app/main/default/objects/ToFromHDE2__mdt/fields/ORG__c.field-meta.xml
<CustomField>
    <fullName>ORG__c</fullName>
    <label>ORG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivo</fullName>
                <default>true</default>
                <label>Vivo</label>
            </value>
            <value>
                <fullName>Comunidades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>