force-app/main/default/objects/ToFromHDE2__mdt/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <label>Roteamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatico N1</fullName>
                <default>true</default>
                <label>Automático N1</label>
            </value>
            <value>
                <fullName>Automatico N2</fullName>
                <label>Automático N2</label>
            </value>
            <value>
                <fullName>Automatico N2 e Automatico N3</fullName>
                <label>Automático N2 e Automático N3</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>