force-app/main/default/objects/ToFromHDE2__mdt/fields/RoutingComplexity__c.field-meta.xml
<CustomField>
    <fullName>RoutingComplexity__c</fullName>
    <label>Complexidade do Roteamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
                <default>true</default>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>