force-app/main/default/objects/ToFromHDE2__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Iniciar</fullName>
                <default>true</default>
                <label>À Iniciar</label>
            </value>
            <value>
                <fullName>Critico</fullName>
                <label>Crítico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>