force-app/main/default/objects/ToFromHDE2__mdt/fields/VAG__c.field-meta.xml
<CustomField>
    <fullName>VAG__c</fullName>
    <label>VAG</label>
    <length>30</length>
    <type>Text</type>
</CustomField>